# site-CHIA-ROU

./: .gitconfig  pyproject.toml  server.py
config/: content.htm  content_backup.htm  sitetitle
content/: About.html  Brython.html  FileZilla.html  HW.html  NX.html  Onshape.html  Replit.html  Schedule.html  Solvespace.html  W10.html  W8.html  github.html  index.html  internet.html  sitemap.html  stud.html  tipuesearch_content.js  w10.html  w12.html  w13.html  w14.html  w15.html  w16.html  w6.html  w8.html  wink3.html  心得.html  每週進度.html  網路設定.html  課程內容.html
downloads/: axis-1.prt  base in solvespace.slvs  bearing-1.prt  bearing-2.prt  block_new.prt  bolt-2.prt  bolt-3.prt  bolt-4.prt  c buckle-1.prt  chuck-1.prt  grip-1.prt  handle-1.prt  lid-1.prt  link in solvespace.slvs  model1+model2.prt  model1.prt  model2.prt  model3+detail.prt  model3.prt  model4.prt  motor-1.prt  nut-1.prt  positioning-1.prt  pulley-1.prt  pulley-2.prt  shaft in solvespace.slvs
